feat: render 연동 준비